--- a/nano/templates/account/change_password.html
+++ b/nano/templates/account/change_password.html
@@ -4,7 +4,7 @@
 
 {% extends 'layout.html' %}
 
-{% block body %}
+{% block content %}
 <div class='span12'>
     <form class='form-stacked' method="POST" action="{{ url_for('account.change_password') }}">
         {{ form.hidden_tag() }}
