--- a/nano/templates/plain.html
+++ b/nano/templates/plain.html
@@ -3,22 +3,23 @@
   <head>
     {% block head %}
     <meta charset="utf-8" />
-    <title>{{ page_title }}</title>
+    <title>Nanoinvoice - {{ page_title }}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/nano/stylesheets/screen.css" />
     {% endblock %}
   </head>
   <body>
-    <div class="container">
-      
-      <div class="application">
+    <div class="container plain">
+
         <div class="header">
+          <img class="logo" src="/static/img/logo.png">
         </div>
+
         <div class="content">
           {% block content %}{% endblock %}
         </div>
+      
         <div class="footer">
         </div>
-      </div>
 
 
     </div>
