--- a/nano/templates/account/reauth.html
+++ b/nano/templates/account/reauth.html
@@ -4,7 +4,7 @@
 
 {% extends "layout.html" %}
 
-{% block body %}
+{% block content %}
 <div class='span12'>
     <form class='form-stacked' method="POST" action="{{ url_for('account.reauth') }}">
         {{ form.hidden_tag() }}
