--- a/nano/templates/plain.html
+++ b/nano/templates/plain.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="container plain">
+      
+      {% include '_flash.html' %}
 
         <div class="header">
           <img class="logo" src="/static/img/logo.png">
