--- a/nano/static/css/nano/sass/_layout.scss
+++ b/nano/static/css/nano/sass/_layout.scss
@@ -1,18 +1,14 @@
 
 body, html {
-  background-color: #e8ebef;
+  background-color: $bg-colour;
   font-size: $base-font-size;
   font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
-  color: #222;
+  color: #333;
+  background-image: url('/static/img/bg.png');
 }
 
 * {
   @include box-sizing(border-box);
-}
-
-.header { 
-  padding-top: 5px;
-  margin: 0 5px 10px 5px;
 }
 
 .plain {
@@ -22,4 +18,57 @@ body, html {
   }
 }
 
+.header { 
+  background-color: auto; 
+  padding: 5px 0 10px 0;
 
+  .account {
+    float: right;
+    padding-top: 20px;
+    ul li {
+      display: inline-block;
+      margin-left: 4px;
+    }
+
+    a {
+      text-decoration: none;
+      color: #666;
+    }
+  }
+}
+
+.application {
+  background-color: #fff;
+  
+  @include box-shadow(0px 0px 4px #888);
+  @include border-radius(4px);
+  border: 1px solid #888;
+  
+  .top {
+    @include panel-header;
+  }
+
+  .bottom {
+  }
+}
+
+.content {
+  clear: both;
+  @include pie-clearfix;
+  
+  .sidebar {
+    @include span-columns(3);
+    @include border-radius(0 0 0 4px);
+    background-color: #E9F2F9;
+    padding-bottom: 2em;
+    border-right: 1px solid darken(#E9F2F9, 10%);
+  }
+
+  .workspace {
+    @include span-columns(9 omega);
+    padding-bottom: 2em;
+  } 
+}
+
+.footer {
+}
