--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -65,33 +65,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* -------------------------------------------------------------------------*/
 /* Layout */
-/* line 2, ../sass/_layout.scss */
-body, html {
-  background-color: #e8ebef;
-  font-size: 14px;
-  font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
-  color: #222;
-}
-
-/* line 9, ../sass/_layout.scss */
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 13, ../sass/_layout.scss */
-.header {
-  padding-top: 5px;
-  margin: 0 5px 10px 5px;
-}
-
-/* line 19, ../sass/_layout.scss */
-.plain .header {
-  margin-top: 2em;
-  text-align: center;
-}
-
 /* line 1, ../sass/_shared.scss */
 h1 {
   color: #ee3322;
@@ -99,6 +72,189 @@ h1 {
   line-height: 1.714em;
   line-height: 1em;
   font-weight: 900;
+}
+
+/* line 17, ../sass/_shared.scss */
+.sidebar h3 {
+  text-shadow: 0 1px white;
+  font-size: 0.857em;
+  line-height: 2em;
+  font-weight: bold;
+  color: #758594;
+  text-transform: uppercase;
+  margin: 20px 0 2px 12px;
+}
+/* line 25, ../sass/_shared.scss */
+.sidebar ul.menu li {
+  display: block;
+  margin: 0px 0 2px 12px;
+}
+/* line 28, ../sass/_shared.scss */
+.sidebar ul.menu li a {
+  display: block;
+  text-decoration: none;
+  color: #515765;
+  padding: 5px 12px;
+}
+
+/* line 37, ../sass/_shared.scss */
+.filters {
+  *zoom: 1;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(5%, #efefef), color-stop(100%, #d9d9d9));
+  background-image: -webkit-linear-gradient(center top, #efefef 5%, #d9d9d9 100%);
+  background-image: -moz-linear-gradient(center top, #efefef 5%, #d9d9d9 100%);
+  background-image: -o-linear-gradient(center top, #efefef 5%, #d9d9d9 100%);
+  background-image: -ms-linear-gradient(center top, #efefef 5%, #d9d9d9 100%);
+  background-image: linear-gradient(center top, #efefef 5%, #d9d9d9 100%);
+  border-bottom: 1px solid #ccc;
+  padding: 4px;
+  background-color: #efefef;
+  font-size: 12px;
+}
+/* line 38, ../../../../../../../home/sanjeevan/.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.filters:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 46, ../sass/_shared.scss */
+.filters a {
+  text-decoration: none;
+  color: #515765;
+  line-height: 16px;
+  padding: 4px;
+}
+/* line 52, ../sass/_shared.scss */
+.filters a img {
+  vertical-align: middle;
+  margin-bottom: 3px;
+}
+/* line 60, ../sass/_shared.scss */
+.filters .left {
+  float: left;
+}
+/* line 64, ../sass/_shared.scss */
+.filters .right {
+  float: right;
+}
+
+/* line 69, ../sass/_shared.scss */
+.first-create {
+  margin: 50px auto;
+  display: block;
+  text-align: center;
+}
+
+/* line 2, ../sass/_layout.scss */
+body, html {
+  background-color: white;
+  font-size: 14px;
+  font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
+  color: #333;
+  background-image: url("/static/img/bg.png");
+}
+
+/* line 10, ../sass/_layout.scss */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 15, ../sass/_layout.scss */
+.plain .header {
+  margin-top: 2em;
+  text-align: center;
+}
+
+/* line 21, ../sass/_layout.scss */
+.header {
+  background-color: auto;
+  padding: 5px 0 10px 0;
+}
+/* line 25, ../sass/_layout.scss */
+.header .account {
+  float: right;
+  padding-top: 20px;
+}
+/* line 28, ../sass/_layout.scss */
+.header .account ul li {
+  display: inline-block;
+  margin-left: 4px;
+}
+/* line 33, ../sass/_layout.scss */
+.header .account a {
+  text-decoration: none;
+  color: #666;
+}
+
+/* line 40, ../sass/_layout.scss */
+.application {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 4px #888888;
+  -moz-box-shadow: 0px 0px 4px #888888;
+  box-shadow: 0px 0px 4px #888888;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #888;
+}
+/* line 47, ../sass/_layout.scss */
+.application .top {
+  height: 2em;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(5%, #3584d8), color-stop(100%, #2777cc));
+  background-image: -webkit-linear-gradient(center top, #3584d8 5%, #2777cc 100%);
+  background-image: -moz-linear-gradient(center top, #3584d8 5%, #2777cc 100%);
+  background-image: -o-linear-gradient(center top, #3584d8 5%, #2777cc 100%);
+  background-image: -ms-linear-gradient(center top, #3584d8 5%, #2777cc 100%);
+  background-image: linear-gradient(center top, #3584d8 5%, #2777cc 100%);
+  -webkit-border-radius: 2px 2px 0 0;
+  -moz-border-radius: 2px 2px 0 0;
+  -ms-border-radius: 2px 2px 0 0;
+  -o-border-radius: 2px 2px 0 0;
+  border-radius: 2px 2px 0 0;
+  -webkit-box-shadow: 0 1px #609ee0 inset;
+  -moz-box-shadow: 0 1px #609ee0 inset;
+  box-shadow: 0 1px #609ee0 inset;
+  border-bottom: 1px solid #1f5ea1;
+}
+
+/* line 55, ../sass/_layout.scss */
+.content {
+  clear: both;
+  *zoom: 1;
+}
+/* line 38, ../../../../../../../home/sanjeevan/.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.content:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 59, ../sass/_layout.scss */
+.content .sidebar {
+  width: 25%;
+  float: left;
+  margin-right: 0%;
+  display: inline;
+  -webkit-border-radius: 0 0 0 4px;
+  -moz-border-radius: 0 0 0 4px;
+  -ms-border-radius: 0 0 0 4px;
+  -o-border-radius: 0 0 0 4px;
+  border-radius: 0 0 0 4px;
+  background-color: #E9F2F9;
+  padding-bottom: 2em;
+  border-right: 1px solid #c1daee;
+}
+/* line 67, ../sass/_layout.scss */
+.content .workspace {
+  width: 75%;
+  float: right;
+  margin-right: 0;
+  #margin-left: 0px;
+  display: inline;
+  padding-bottom: 2em;
 }
 
 /* line 2, ../sass/_login.scss */
@@ -210,15 +366,23 @@ form span.error {
   color: red;
 }
 
-/* line 16, ../sass/screen.scss */
+/* line 1, ../sass/_flash.scss */
+ul.flashes {
+  display: block;
+  padding: 4px;
+  margin-top: 4px;
+  background-color: #fff;
+}
+
+/* line 17, ../sass/screen.scss */
 .container {
   *zoom: 1;
-  max-width: 59em;
-  _width: 59em;
+  max-width: 960px;
+  _width: 960px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 0px;
+  padding-right: 0px;
   -webkit-background-origin: content;
   -moz-background-origin: content;
   -ms-background-origin: content-box;
