--- a/nano/templates/client/index.html
+++ b/nano/templates/client/index.html
@@ -4,7 +4,7 @@
   
   <div class="filters">
     <div class="left">
-      <a href=#"><img src="/static/img/plus.png"> Add client</a>
+      <a href="{{ url_for('.create') }}"><img src="/static/img/plus.png"> Add client</a>
     </div>
     <div class="right">
     </div>
@@ -12,7 +12,7 @@
 
   {% if contacts|length == 0 %}
     
-  <p class="first-create">You have no clients setup, add one now</p>
+  <p class="first-create">You have no clients setup, <a href="{{ url_for('.create') }}">add one now</a></p>
     
   {% endif %}
 
