--- a/nano/static/css/nano/sass/_buttons.scss
+++ b/nano/static/css/nano/sass/_buttons.scss
@@ -19,15 +19,40 @@
     text-decoration:none;
     text-shadow:1px 1px 0px #528ecc;
   }
-  &.primary:hover {
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) );
-    background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
-    background-color:#378de5;
-  }
+
   &.primary:active {
     position:relative;
     top:1px;
   }
+
+  &.normal {
+    -moz-user-select: none;
+    background-color: #F1F4F9;
+    background-image: -moz-linear-gradient(center top , #F7FAFF, #E8EBF0);
+    background-repeat: repeat-x;
+    border: 1px solid #B1BCCA;
+    border-radius: 3px 3px 3px 3px;
+    box-shadow: 0 1px 1px #FFFFFF inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+    color: #737C93;
+    cursor: pointer;
+    display: inline-block;
+    font-family: proxima-nova,sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 8px 16px;
+    vertical-align: top;
+  }
+
+  &.normal:active {
+    outline: none;
+    background-color: #E2E5EC;
+    background-image: -moz-linear-gradient(center top , #DDE0E7, #E9ECF3);
+    background-repeat: repeat-x;
+    border-color: #CCD0DA;
+    box-shadow: 0 1px 3px rgba(96, 101, 124, 0.1) inset, 0 1px 0 #FFFFFF;
+    color: #5C627F;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
+  }
 }
+
 
