--- a/nano/static/css/nano/sass/_forms.scss
+++ b/nano/static/css/nano/sass/_forms.scss
@@ -1,4 +1,43 @@
+
+/// -- Form mixins 
+$highlight-focus: #ff0000;
+
+@mixin glow-inputs() {
+  input {
+    border:1px solid rgba(0,0,0, 0.2);
+    outline:none;
+
+    transition: all 0.25s ease-in-out;
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    
+    @include border-radius(3px);
+    
+    &:focus {
+      @include box-shadow(0 0 2px rgba(0, 0, 255, 1)); 
+      border:1px solid rgba(82, 168, 236, 0.6); 
+    }
+  }
+}
+
+@mixin large-inputs() {
+  input {
+    font-size: 1.3em;
+    padding: 4px;
+  }
+}
+
+/// -- Form styles
+
 form {
+  label {
+    color: #828282;
+    font-weight: bold;
+  }
+  input {
+    color: #555555;
+  }
+
   .field {
     margin-bottom: 1em;
     clear: both;
@@ -16,29 +55,33 @@ form {
 
 form.inline {
   label {
-    float: left;
+    display: inline-block;
     width: 150px;
+  }
+  div.input {
+    display: inline-block;
   }
 }
 
 form.create {
   width: 80%;
   margin: 3em auto;
-  background-color: #efefef;
-  border: 1px solid #ccc;
-
+  
   @include border-radius(4px);
   @include box-shadow(0px 0px 5px #ccc);
+  @include glow-inputs();
+  @include large-inputs();
 
   .fields {
     padding: 1em;
+    @include panel-body();
   }
-  
+
+  input {
+    width: 366px;
+  }
+
   .header {
-    @include border-radius(4px 4px 0 0);
-    background-color: lighten($panel-colour, 10%); 
-    border-bottom: 1px solid #ccc;
-    padding: 1em;
-    color: #fff;
+    @include panel-header2();
   }
 }
