--- a/nano/static/css/nano/sass/_shared.scss
+++ b/nano/static/css/nano/sass/_shared.scss
@@ -1,10 +1,3 @@
-h1 {
-  color: $h1-colour;
-  @include adjust-font-size-to(28px);
-  line-height: 1em;
-  font-weight: 900;
-}
-
 @mixin panel-header() {
   height: 2em;
   @include background-image(linear-gradient(center top, $panel-colour 5%, darken($panel-colour, 5%) 100%));
@@ -12,6 +5,38 @@ h1 {
   @include box-shadow(0 1px lighten($panel-colour, 10%) inset);
   border-bottom: 1px solid darken($panel-colour, 15%);
 }
+
+@mixin panel-header2() {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background-color: #ECECED;
+  background-image: -moz-linear-gradient(center top , #F7F8F8, #DBDBDC);
+  background-repeat: repeat-x;
+  border-color: #AAAAAA #AAAAAA -moz-use-text-color;
+  border-image: none;
+  border-radius: 4px 4px 0 0;
+  border-style: solid solid none;
+  border-width: 1px 1px 0;
+  margin: 0 auto;
+  padding: 9px 10px;
+}
+
+@mixin panel-body() {
+  background: -moz-linear-gradient(center top , #FFFFFF, #F5F4F4) repeat-x scroll 0 0 #FBFBFB;
+  border: 1px solid #AAAAAA;
+  border-radius: 0 0 4px 4px;
+  margin: 0 auto 12px;
+}
+
+h1 {
+  color: $h1-colour;
+  @include adjust-font-size-to(28px);
+  line-height: 1em;
+  font-weight: 900;
+}
+
 
 .sidebar {
   h3 {
@@ -37,24 +62,26 @@ h1 {
 .filters { 
   @include pie-clearfix;
   @include background-image(linear-gradient(center top, #efefef 5%, darken(#ffffff, 15%) 100%));
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #AAAAAA;
   
-  padding: 4px;
+  padding: 8px;
   background-color: #efefef;
-  font-size: 12px;
 
   a {
     text-decoration: none;
-    color: #515765;
+    color: #555555;
     line-height: 16px;
-    padding: 4px;
+    padding: 4px 10px;
+    @include border-radius(20px);
 
     img { 
       vertical-align: middle;
       margin-bottom: 3px;
     }
-
-
+  }
+  
+  a:hover {
+    background-color: #ccc;
   }
 
   .left {
@@ -70,4 +97,26 @@ h1 {
   margin: 50px auto;
   display: block;
   text-align: center;
+}
+
+.data-list {
+  
+  @include box-sizing(border-box);
+
+  margin: 10px;
+  border: 1px solid #aaaaaa;
+
+  .row {
+    background-color: #fff;
+    border-bottom: 1px solid #aaaaaa;
+    padding: 5px;
+  }
+
+  .row:hover {
+    background-color: #ececec;
+  }
+
+  .row:last-child {
+    border-bottom: none;
+  }
 }
